[tool.poetry]
name = "znish"
version = "0.1.0"
description = ""
authors = ["laiso <laiso@lai.so>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.119"
openai = "^0.27.2"
tiktoken = "^0.3.2"
slack-bolt = "^1.16.4"
flask = "^2.2.3"
google-search-results = "^2.4.2"
google-api-python-client = "^2.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
